syntax = "proto3";

option go_package="./pkg/pb";

message User {
  uint64 ID = 1 ;
  string FirstName = 2;
  string LastName=3;
  string email = 4;
  int64 age =5;
  string phone =6;
}

message UserIDRequest {
  string user_id = 1;
}
message UserDeleteResponse{
  string msg=1;
}

service UserService {
  rpc CreateUser(User) returns (User);
  rpc GetUserByID(UserIDRequest) returns (User);
  rpc UpdateUser(User)returns(User);
  rpc DeleteUserByID(UserIDRequest) returns(UserDeleteResponse);
}
